fix video container overflow in edit mode

--- a/mcww_web/style.css
+++ b/mcww_web/style.css
@@ -23,6 +23,10 @@ footer .divider {
     height: 100% !important;
 }
 
+.video-container:has(time) {
+    overflow: scroll;
+}
+
 #compareImageHeadGroup {
     margin-left: auto;
     margin-right: auto;
